@@ -6,11 +6,12 @@ development home at https://github.com/projectestac/agora_nodes
 Changes in progress
 ---------------------------------------------------------------------------------------
 - GCE: Updated from 2.2.5 (Legacy Google Calendar Events 2.4) to 3.1.2 (Simple Calendar - Google Calendar Plugin) (Trello #1034)
+- New users: Fixed URL to change password not showing in email sent to new users
 
 
 Changes 16.09.07
 ---------------------------------------------------------------------------------------
-- BPDOCS: Fixed bug when uploading files when editing them if protocol it is not HTTPS (Trello #1205)
+- buddypress-docs: Fixed bug when uploading files when editing them if protocol it is not HTTPS (Trello #1205)
 
 
 Changes 16.08.22
